--- a/config.json
+++ b/config.json
@@ -8,7 +8,7 @@
       
     }
   ],
-  "playlist": {
+  "playlists": {
     "jogos": [
       {
         "title": "Frostpunk - Neve e Steak tartare",
